# queen-placement

./: Cargo.toml  README.md
src/: board.rs  board_old.rs  chromosome.rs  config.rs  lib.rs  selection.rs
