[package]
name = "queen-placement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "string"] }
crossterm = "0.25"
rand = "0.8"
rayon = "1.6"

[dev-dependencies]
pretty_assertions = "1.3"